--- a/index.html
+++ b/index.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web studio</title>
+    <title>Webstudio</title>
 </head>
+
 <body>
-<h1>Hallo World!</h1>
-<a href="index.html"><img src="" alt=""></a>
+    <header>
+        <p><span>Web</span>Studio</p>
+        <nav>
+            <ul>
+                <li>Студия</li>
+                <li>Портфолио</li>
+                <li>Контакты</li>
+            </ul>
+        </nav>
+        
+        <ul>
+            <li><a href="mailto: info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="callto: +380961111111">+38 096 111 11 11</a></li>
+        </ul>
+
+    </header>
+
+    <main>
+
+        <div>
+            <h1>эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+            <a href=""></a>
+        </div>
+
+        <section>
+            <h2>Наши особенности</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="./images/cod" alt=""> </li>
+                <li></li>
+                <li></li>
+            </ul>
+
+        <section>
+           
+
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
+</body>
 </html>
