--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         </section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/cod" alt=""> </li>
-                <li></li>
-                <li></li>
+                <li><img src="./images/coding.jpeg" alt="Грамотний код" width="370"></li>
+                <li><img src="./images/mobileapp.jpeg" alt="Мобильные приложения" width="370"></li>
+                <li><img src="./images/design.jpeg" alt="Дизайн сайтов" width="370"></li>
             </ul>
 
         <section>
