--- a/index.html
+++ b/index.html
@@ -62,13 +62,42 @@
             </ul>
 
         <section>
-           
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/demianenko.jpeg" alt="Фото Игоря Демьяненко" width="270">
+                    <h4>Игорь Демьяненко</h4>
+                    <p lang="En">Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/repina.jpeg" alt="Фото Ольги Репниной" width="270">
+                    <h4>Ольга Репина</h4>
+                    <p lang="En">Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/tarasov.jpeg" alt="Фото Николая Тарасова" width="270">
+                    <h4>Николай Тарасов</h4>
+                    <p lang="En">Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/ermakov.jpeg" alt="Фото Михаила Ермакова" width="270">
+                    <h4>Михаил Ермаков</h4>
+                    <p lang="En">UI Designer</p>
+                </li>
+            </ul>
 
         </section>
     </main>
 
     <footer>
-
+        <p><span>Web</span>Studio</p>
+        <address>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+        </address>
+        <ul>
+            <li><a href="mailto: info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="callto: +380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </footer>
 </body>
 </html>
