--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webstudio</title>
+    <title>Студия</title>
 </head>
 
 <body>
@@ -30,7 +30,6 @@
         <div>
             <h1>эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
-            <a href=""></a>
         </div>
 
         <section>
@@ -92,12 +91,12 @@
     <footer>
         <p><span>Web</span>Studio</p>
         <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+                <ul>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="callto:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
         </address>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="callto:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
     </footer>
 </body>
 </html>
