--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="callto:+380961111111">+38 096 111 11 11</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
 
     </header>
@@ -94,7 +94,7 @@
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
                 <ul>
                     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="callto:+380961111111">+38 096 111 11 11</a></li>
+                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
         </address>
     </footer>
