--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body>
     <header>
-        <p><span>Web</span>Studio</p>
+        <a href="./index.html"><span>Web</span>Studio</a>
         <nav>
             <ul>
-                <li>Студия</li>
-                <li>Портфолио</li>
-                <li>Контакты</li>
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
             </ul>
         </nav>
         
@@ -27,10 +27,10 @@
 
     <main>
 
-        <div>
+        <section>
             <h1>эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
-        </div>
+        </section>
 
         <section>
             <h2>Наши особенности</h2>
@@ -65,22 +65,22 @@
             <ul>
                 <li>
                     <img src="./images/demianenko.jpeg" alt="Фото Игоря Демьяненко" width="270">
-                    <h4>Игорь Демьяненко</h4>
+                    <h3>Игорь Демьяненко</h3>
                     <p lang="En">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/repina.jpeg" alt="Фото Ольги Репниной" width="270">
-                    <h4>Ольга Репина</h4>
+                    <h3>Ольга Репина</h3>
                     <p lang="En">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/tarasov.jpeg" alt="Фото Николая Тарасова" width="270">
-                    <h4>Николай Тарасов</h4>
+                    <h3>Николай Тарасов</h3>
                     <p lang="En">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/ermakov.jpeg" alt="Фото Михаила Ермакова" width="270">
-                    <h4>Михаил Ермаков</h4>
+                    <h3>Михаил Ермаков</h3>
                     <p lang="En">UI Designer</p>
                 </li>
             </ul>
@@ -89,7 +89,7 @@
     </main>
 
     <footer>
-        <p><span>Web</span>Studio</p>
+       <a href="./index.html"><span>Web</span>Studio</a>
         <address>
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
                 <ul>
